# loan

./: .gitignore  Cargo.toml  build-vercel.sh  index.html  vercel.json
.github/workflows/: ci.yml
loan-macros/: Cargo.toml
loan-macros/src/: lib.rs
loan-macros/tests/: test.rs
loan-trait/: Cargo.toml
loan-trait/src/: lib.rs
src/: lib.rs  main.rs
src/cam/: home.rs  index.rs  json_display.rs  loan.rs  mod.rs  not_found.rs  route.rs
src/cam/components/: calculate_dcm.rs  loan.rs  mod.rs  nav.rs  tables.rs  upload.rs
src/cam/components/components_loan/: mod.rs  one_time_repay.rs  utils.rs
src/cam/model/: attachment_records.rs  base.rs  business_flow.rs  collateral_record.rs  constant.rs  extend_record.rs  latest_collateral_list.rs  loan_interest_count_record.rs  loan_interest_rate_change_records.rs  loan_record.rs  matching_plan_record.rs  merged_repay_interest_records.rs  mod.rs
src/utils/: util.rs
