[package]
name = "loan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo = "0.8.1"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.64"

chrono = { version = "*", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.11"


[dependencies.web-sys]
version = "0.3.64"
features = ["console", "Element", "DomTokenList", "DomRect", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "CssStyleDeclaration", "MouseEvent", "IdbFactory", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbDatabase", "IdbObjectStore", "IdbIndex", "IdbTransactionMode", "IdbObjectStoreParameters", "IdbCursorWithValue", "IdbCursorDirection", "IdbKeyRange", "Navigator", "Headers", "Request", "RequestInit", "RequestMode", "Response"]

[workspace]
members = ["loan-macros"]

[workspace.dependencies]
loan-macros = {path="./loan-macros"}